--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>NetFlix</title>
+    <title>Clone NetFlix</title>
     <link rel="shortcut icon" href="img/logo_pagina.png">
     <link rel="stylesheet" href="./styles/main.css">
 
@@ -85,6 +85,33 @@
                 <img class="box-filme" src="img/deverasInteligente.jpg" alt="">
             </div>
         </div>
+        <div class="carrossel-filmes">
+            <div class="owl-carousel owl-theme">
+                <div class="item">
+                    <img class="box-filme" src="img/grey.jpg" alt="">
+                </div>
+                <div class="item">
+                    <img class="box-filme" src="img/rickandmorty.jpg" alt="">
+                </div>
+                <div class="item">
+                    <img class="box-filme" src="img/river.jpg" alt="">
+                </div>
+                <div class="item">
+                    <img class="box-filme" src="img/simpsons.jpg" alt="">
+                </div>
+                <div class="item">
+                    <img class="box-filme" src="img/sobrenatural.jpg" alt="">
+                </div>
+                <div class="item">
+                    <img class="box-filme" src="img/usgury.jpg" alt="">
+                </div>
+                <div class="item">
+                    <img class="box-filme" src="img/bad.jpg" alt="">
+                </div>
+                <div class="item">
+                    <img class="box-filme" src="img/dragon.jpg" alt="">
+                </div>
+            </div>
     </div>
 
     <script src="https://kit.fontawesome.com/bea261c949.js" crossorigin="anonymous"></script>
